--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 </head>
 
 <body>
-    <main>
-        <article>
-            <img src="">
-            <header>
-                <h1>Paweł Kuniec</h1>
-                <p>Instalator elektryczny, światłowodowy, programista </p>
+    <main class="main">
+        <article class="person">
+            <img class="person__picture" src="avatar.png">
+            <header class="person__info">
+                <h1 class="person__name">Paweł Kuniec</h1>
+                <p class="person__position">Instalator elektryczny, światłowodowy, programista </p>
             </header>
-            <p>eregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof
-                bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoieregrbhntgrtgrhtgrvfv ibcwdibueb bvvof bnoi</p>
+            <p class="person__description person__description--with-margin">Programista z <strong class=special>kilkunastoletnim doświadczeniem</strong>,
+                fotograf, operator drona,
+                właściciel Sokoła Millennium (na razie tylko z Lego), <strong class=special>prelegent i
+                    szkoleniowiec</strong>. Uwielbia
+                eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę.
 
-                <p>sf gbtytn  rthyh</p>
+            </p>
+
+            <p class="person__description"> W sieci: <a class="person__link" href="#">Facebook,</a class="person__link"
+                    href=#> <a>GitHub,</a> <a class="person__link" href="#">Instagram.</a></p>
         </article>
     </main>
 
