--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 <body>
     <main class="main">
         <article class="person">
-            <img class="person__picture" src="avatar.png">
-            <header class="person__info">
-                <h1 class="person__name">Paweł Kuniec</h1>
-                <p class="person__position">Instalator elektryczny, światłowodowy, programista </p>
-            </header>
-            <p class="person__description person__description--with-margin">Programista z <strong class=special>kilkunastoletnim doświadczeniem</strong>,
-                fotograf, operator drona,
-                właściciel Sokoła Millennium (na razie tylko z Lego), <strong class=special>prelegent i
-                    szkoleniowiec</strong>. Uwielbia
-                eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę.
+            <img class="person__picture"  src="zdjęcie.png" width="148px" height= "148px" >
+            <div>
+                <header class="person__info">
+                    <h1 class="person__name">Paweł Kuniec</h1>
+                    <p class="person__position">frontend developer, Instalator elektryczny oraz światłowodowy </p>
+                </header>
+                <p class="person__description person__description--with-margin">Wykonuję strony internetowe typu <strong
+                        class=special>wizytówka, portfolio, firmowe</strong> dla osób prowadzących jednoosobową
+                    działalność, dużych firm, sklepów oraz instytucji. <br> <br>
+                    
+                    Wykonuję również <strong class=special>istalacje elektrycze</strong> oraz <strong class=special>światłowodowe</strong> w domkach jednorodzinnych i wielorodzinnych. 
 
-            </p>
+                </p>
 
-            <p class="person__description"> W sieci: <a class="person__link" href="#">Facebook,</a class="person__link"
-                    href=#> <a>GitHub,</a> <a class="person__link" href="#">Instagram.</a></p>
+                <p class="person__description"> nr telefonu: <strong>723 613 221</strong> email:  <strong>pawllo1992@vp.pl</strong>
+                </p>
+            </div>
         </article>
     </main>
 
