--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="main">
         
         <article class="person">
-            <img class="person__picture"  src="../assets/zdjęcie.png" width="148px" height= "148px" >
+            <img class="person__picture"  src="zdjęcie.png" width="148px" height= "148px" >
             <div>
                 <header class="person__info">
                     <h1 class="person__name">Paweł Kuniec</h1>
